--- a/Task 2 - HTML,CSS,Javascript,Angular 9/angular-crud/angular.json
+++ b/Task 2 - HTML,CSS,Javascript,Angular 9/angular-crud/angular.json
@@ -36,7 +36,8 @@
             ],
             "styles": [
               "src/theme.less",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
