--- a/Task 2 - HTML,CSS,Javascript,Angular 9/angular-crud/angular.json
+++ b/Task 2 - HTML,CSS,Javascript,Angular 9/angular-crud/angular.json
@@ -37,7 +37,9 @@
             "styles": [
               "src/theme.less",
               "src/styles.scss",
-              "node_modules/ngx-toastr/toastr.css"
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/ag-grid-community/dist/styles/ag-grid.css",
+              "node_modules/ag-grid-community/dist/styles/ag-theme-balham.css"
             ],
             "scripts": []
           },
